# sparv-kb-ner-plugin

./: .gitignore  Justfile  Makefile  README.md  pyproject.toml  workspace.toml
assets/: 8sidor_SWENER_KBNER_comparison.md  Ikea_SWENER_KBNER_comparison.md
assets/8sidor-kbner/: config.yaml
assets/8sidor-swener/: config.yaml
assets/ikea-kbner/: config.yaml
assets/ikea-swener/: config.yaml
assets/ikea-swener/source/: document.txt
bases/sbx_ner/kb_ner_plugin/: __init__.py  core.py
benches/8sidor/custom/cased-ner/full/: config.yaml
benches/8sidor/custom/reallysimple-ner/: create-benches.sh
benches/8sidor/custom/reallysimple-ner/full/: config.yaml
benches/8sidor/custom/reallysimple-ner/texts-1/source/: 8sidor-mini-1.xml
benches/8sidor/hugging_face/cased-ner/full/: config.yaml
benches/8sidor/hugging_face/cased-ner/full/source/: 8sidor-mini.xml
benches/8sidor/hugging_face/reallysimple-ner/full/: config.yaml
benches/8sidor/hugging_face/reallysimple-ner/texts-1/: config.yaml
development/: try_bert_ner.py  try_other_model.py
projects/sparv-kb-ner-plugin/: pyproject.toml
sparv_kb_ner/: __init__.py  annotators.py  core.py  custom_ner_pipeline.py
src/sparv_kb_ner/: __init__.py  annotators.py  huggingface_ner_pipeline.py  ner_pipeline.py
test/bases/sbx_ner/kb_ner_plugin/: test_core.py
tests/: test_sparv_kbner.py
