[tool.poetry]
name = "sparv-kb-ner-plugin"
version = "0.1.0"
description = ""
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
readme = "README.md"
packages = [{include = "sparv_kb_ner"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
