[project]
name = "sparv-kb-ner"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
dependencies = [
    "sparv-pipeline @ git+https://github.com/spraakbanken/sparv-pipeline.git@dev",
    "transformers>=4.34.1",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."sparv.plugin"]
sparv_kb_ner = "sparv_kb_ner"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=7.4.2", "black>=23.10.1"]

[tool.hatch.metadata]
allow-direct-references = true
