[tool.poetry]
name = "sparv-kb-ner-plugin"
version = "0.1.0"
description = ""
authors = ['Kristoffer Andersson <kristoffer.andersson@gu.se>']
license = "MIT"
readme = "README.md"

packages = []

[tool.poetry.dependencies]
python = "^3.10"
sparv-pipeline = {git = "https://github.com/spraakbanken/sparv-pipeline.git", rev = "support-py310"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
